--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "building an AI to play Wordle\r Primary goal is to build a NN that can successfully play the popular word game Wordle. Ideal success would be 3/6. The AI cannot presently play Wordle like a human would, but I will be building an independent library of words for it to pull from.",
   "main": "wordle.js",
   "scripts": {
-    "start:backend": "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
