--- a/package.json
+++ b/package.json
@@ -19,12 +19,19 @@
   "homepage": "https://github.com/DuncanMPlate/wallyPlaysWordle#readme",
   "dependencies": {
     "axios": "^0.25.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dot": "^1.1.3",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "env": "^0.0.2",
     "express": "^4.17.2",
+    "express-flash": "^0.0.2",
     "express-openid-connect": "^2.6.0",
-    "nodemon": "^2.0.15"
+    "express-session": "^1.17.2",
+    "method-override": "^3.0.0",
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   }
 }
